<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_home"
    android:background="@color/frg_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/weather"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tx_mos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moscow"
        android:layout_marginTop="120dp"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cloudy"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:paddingTop="40dp"
        android:text="@string/tmp_msc"
        android:textSize="60sp"
        android:layout_marginEnd="20dp" />

    <TableLayout
        android:id="@+id/dop_fun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/humidity" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/pressure" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wind_z"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_z"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_z"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/choose_city"
        android:textSize="20sp"
        android:textColor="@color/city"
        android:gravity="center_horizontal"/>



</FrameLayout>